public/resources/index.css
body {
  margin: 0;
  padding: 20px;
  background: url("background.jpg") no-repeat center center fixed;
  background-size: cover;
  font-size: 16px;
  font-family: sans-serif;
}

div, label, input {
  box-sizing: border-box;
}

h1 {
  margin-top: 0;
}

a {
  color: #e619a1;
}

a:hover {
  opacity: .75;
}

img {
  width: 100%;
  margin-bottom: 20px;
}

form {
 background: #111;
 padding: 10px;
 text-align: center;
 border-radius: 5px;
}

form label {
  display: block;
  font-weight: bold;
}

form div {
  display: block;
  margin-bottom: 5px;
}

form em {
  display: block;
  font-size: 12px;
}

form input[type="file"] {
  padding: 20px;
  border: 1px solid #666;
  margin: 10px;
  cursor: pointer;
}

form button[type="submit"] {
  background: #e619a1;
  color: white;
  font-weight: bold;
  font-size: 16px;
  border-radius: 5px;
  border: 0;
  padding: 10px 30px;
  cursor: pointer;
}

form button[type="submit"]:hover {
  opacity: .75;
}

.error-message {
  border: 1px solid #e619a1;
  padding: 10px;
  color: #e619a1;
  margin-bottom: 20px;
}

.blur {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #00000033;
  backdrop-filter: blur(5px);
}

.wrapper {
  background: #000;
  color: white;
  position: relative;
  top: 0;
  left: 0;
  z-index: 999;
  border-radius: 20px;
  box-shadow: 0 0 10px black;
  padding: 30px;
  width: 100%;
  max-width: 960px;
  margin: 0 auto;
  line-height: 24px;
}

